--- a/src/tailwind.output.css
+++ b/src/tailwind.output.css
@@ -17827,7 +17827,7 @@ video {
 }
 
 .bg-clouds-image {
-  background-image: url('https://jooinn.com/images/large-puffy-clouds-2.jpg');
+  background-image: url('https://cdn.pixabay.com/photo/2018/03/07/19/51/grass-3206938_960_720.jpg');
 }
 
 .from-transparent {
@@ -50276,7 +50276,7 @@ video {
   }
 
   .sm\:bg-clouds-image {
-    background-image: url('https://jooinn.com/images/large-puffy-clouds-2.jpg');
+    background-image: url('https://cdn.pixabay.com/photo/2018/03/07/19/51/grass-3206938_960_720.jpg');
   }
 
   .sm\:from-transparent {
@@ -81521,7 +81521,7 @@ video {
   }
 
   .md\:bg-clouds-image {
-    background-image: url('https://jooinn.com/images/large-puffy-clouds-2.jpg');
+    background-image: url('https://cdn.pixabay.com/photo/2018/03/07/19/51/grass-3206938_960_720.jpg');
   }
 
   .md\:from-transparent {
@@ -112766,7 +112766,7 @@ video {
   }
 
   .lg\:bg-clouds-image {
-    background-image: url('https://jooinn.com/images/large-puffy-clouds-2.jpg');
+    background-image: url('https://cdn.pixabay.com/photo/2018/03/07/19/51/grass-3206938_960_720.jpg');
   }
 
   .lg\:from-transparent {
@@ -144011,7 +144011,7 @@ video {
   }
 
   .xl\:bg-clouds-image {
-    background-image: url('https://jooinn.com/images/large-puffy-clouds-2.jpg');
+    background-image: url('https://cdn.pixabay.com/photo/2018/03/07/19/51/grass-3206938_960_720.jpg');
   }
 
   .xl\:from-transparent {
@@ -175256,7 +175256,7 @@ video {
   }
 
   .\32xl\:bg-clouds-image {
-    background-image: url('https://jooinn.com/images/large-puffy-clouds-2.jpg');
+    background-image: url('https://cdn.pixabay.com/photo/2018/03/07/19/51/grass-3206938_960_720.jpg');
   }
 
   .\32xl\:from-transparent {
